--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,58 @@
-*, *::after, *:before {
-    box-sizing: border-box;
+*,
+*::after,
+*:before {
+  box-sizing: border-box;
 }
 
 body {
-    width: 500px;
-    margin: 0 auto;
+  width: 500px;
+  margin: 0 auto;
+  font-size: 16px;
 }
 
 image {
-    width: 100%;
+  width: 100%;
 }
 
-h1, h2, p, image {
-    margin-top: 0; 
+h1,
+h2,
+p,
+image {
+  margin-top: 0;
 }
 
 h1 {
-    text-align: center;
-    color: #2E7AD3;
-    font-size: 48px;
-    margin: 45px 0;
+  text-align: center;
+  color: #2e7ad3;
+  font-size: 48px;
+  margin: 45px 0;
 }
 
 h2 {
-    color: #104c90;
-    font-size: 32px;
-}
-
-p {
-    font-size: 16px;
+  color: #104c90;
+  font-size: 32px;
 }
 
 a {
-    color: #ff8000;
-    font-weight: bold 
+  color: #ff8000;
+  font-weight: bold;
 }
 
-a:hover, a:focus {
-    color:violet;
+a:hover,
+a:focus {
+  color: violet;
 }
-
 
 .card {
-    background: #f1f1f1;
-    width: 100%;
-    padding: 20px;
+  background: #f1f1f1;
+  width: 100%;
+  padding: 20px;
 }
 
 .first-p {
-    margin: 25px 0 9px 0;
+  margin: 25px 0 9px 0;
+}
+
+.last-el {
+  margin-bottom: 0;
 }
